--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 
-To See H2 Console in Browser:
+
+# Spring security configuration
+spring.security.user.name=finaxys
+spring.security.user.password=finaxys
+
 # http://localhost:8080/h2-console
 # Enabling H2 Console
 spring.h2.console.enabled=true
